some bugs on tablets 🥲

--- a/src/scss/home-page-main.scss
+++ b/src/scss/home-page-main.scss
@@ -47,8 +47,9 @@
 }
 
 #section-5 {
+  justify-content: center;
   display: flex;
-  gap: 15rem;
+  gap: 10rem;
   align-items: center;
   padding: 15rem;
 }
